--- a/style.css
+++ b/style.css
@@ -1,3 +1,67 @@
-html {
-    font-family: "Roboto", sans-serif;
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: "Montserrat", sans-serif;
+}
+
+body {
+    background-color: #efefef;
+}
+
+header {
+    background-color: #ff9b8f;
+    color: white;
+    padding: 3rem 2rem;
+}
+
+header h1 {
+    font-size: 3rem;
+    text-align: center;
+}
+
+.container {
+    width: 300px;
+    margin: 0 auto;
+}
+
+section article {
+    transition: box-shadow 0.3s ease; /*box-shadow - all*/
+    background-color: #fff;
+    margin: 1rem 0;
+    border-radius: 0.5rem;
+    padding: 0.25rem 0;
+    cursor: pointer;
+}
+
+section article:hover {
+    box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.3);
+}
+
+section article h2, section article p, section article figcaption {
+    margin: 1rem;
+}
+
+footer {
+    background-color: #9e6a90;
+    padding: 3rem;
+    color: #fff;
+}
+
+footer section {
+    float: right;
+}
+
+footer p {
+    margin: 0;
+}
+
+footer a {
+    transition: color 0.3s ease;
+    color: #fff;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: purple;
 }
