--- a/style.css
+++ b/style.css
@@ -13,10 +13,19 @@ header {
     background-color: #ff9b8f;
     color: white;
     padding: 2rem 2rem;
+    width: 100% ;
+    position: sticky;
+    top: 0;
 }
 
 header nav img {
     width: 100px;
+}
+
+header nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 header h1 {
@@ -25,45 +34,78 @@ header h1 {
 }
 
 .container {
-    width: 300px;
-    margin: 0 auto;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    /* align-content: center; */
+    /* flex-direction: row; */
+    /* flex-direction: row-reverse; */
+    justify-content: center;
+    gap: 1rem;
 }
+
 
 section article {
     transition: box-shadow 0.3s ease; /*box-shadow - all*/
     background-color: #fff;
-    margin: 1rem 0;
     border-radius: 0.5rem;
-    padding: 0.25rem 0;
+    padding: 1rem;
     cursor: pointer;
+    display: flex;
+    width: 300px;
+    flex-direction: column;
+    gap: .5rem;
+    font-size: .9rem;
+}
+
+section article figure {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+section article img {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+
+section article figure figcaption {
+    padding: .5rem 0 0 0;
 }
 
 section article:hover {
     box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.3);
 }
 
-section article h2, section article p, section article figcaption {
-    margin: 1rem;
-}
-
 footer {
     background-color: #9e6a90;
-    padding: 3rem;
     color: #fff;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row-reverse;
+    gap: 1rem;
 }
 
 footer section {
+    padding-right: 1rem;
     float: right;
-}
-
-footer p {
-    margin: 0;
+    height: inherit;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 }
 
 footer a {
     transition: color 0.3s ease;
     color: #fff;
     text-decoration: none;
+    
 }
 
 footer a:hover {
