--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
-
 * {
     margin: 0;
     padding: 0;
     font-family: "Montserrat", sans-serif;
+}
+
+html {
+    font-size: 16px;
 }
 
 body {
@@ -28,7 +31,7 @@ header nav {
 }
 
 header h1 {
-    font-size: 3rem;
+    font-size: 2rem;
     text-align: center;
 }
 
@@ -113,10 +116,11 @@ footer a:hover {
 }
 
 @media screen and (max-width: 500px) {
-    
+
     .container {
         flex-wrap: wrap;
     }
+    
     article {
         width: 300px;
     }
