--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ header {
     width: 100% ;
     position: sticky;
     top: 0;
+    padding: 2rem 0;
 }
 
 header nav img {
@@ -31,8 +32,9 @@ header nav {
 }
 
 header h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
     text-align: center;
+    height: inherit;
 }
 
 .container {
@@ -43,10 +45,6 @@ header h1 {
     gap: 1rem;
     min-height: 100vh;
 }
-
-    /* align-content: center; */
-    /* flex-direction: row; */
-    /* flex-direction: row-reverse; */
 
 section article {
     transition: box-shadow 0.3s ease; /*box-shadow - all*/
